final version include all functionality requirement for assignment.